--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "prisma": "^7.1.0",
@@ -36,9 +37,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.25",
     "@types/pg": "^8.15.6",
-    "@types/react": "^19",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "dotenv": "^17.2.3",
@@ -47,6 +48,6 @@
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
