Fix JSON parse error

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-DATABASE_URL=postgresql://neondb_owner:bfdbfdb fdb@ep-weathered-shadow-ahcus-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+DATABASE_URL=postgresql://neondb_owner:bfdbfdb fdb@ep-weathered-shadow-ahcus-east-1.aws.neon.tech/neondb?sslmode=sdvervfds=require
 
 
-GOOGLE_CLIENT_ID=6fc71705evbm2mlnolg.apps.googleusercontent.com
+GOOGLE_CLIENT_ID=6fc715evbm2mlnolg.apps.googleusercontent.com
 
-GOOGLE_CLIENT_SECRET=GOCSPX-5ktg1b0BDFr6uBc
+GOOGLE_CLIENT_SECRET=GOCSPX-g1b0BDFr6uBc
 
-NEXTAUTH_SECRET=nfdbgtbgthgmnhgmhggbfgbgbfdbfb
+NEXTAUTH_SECRET=nfdbgtbgthgmjlbhnhgmhggbfgbgbfdbfb
 
